feat: created the hero section and styled its

--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
       <button>Contact us</button>
     </header>
     <main>
+        <div class="lineSmall"></div>
+        <div class="lineSmall2"></div>
+        <p class="mirroredText">Modern Interior Design Studio</p>
         <div class="line"></div>
         <div class="line2"></div>
+        <div class="line3"></div>
+        <div class="line4"></div>
         <section class="heroSection">
         <div class="yellow"></div>
-        <img class="gray"></img>
+        <div class="wrapperGray">
+          <img class="gray"></img>
+        </div>
         <img class="gray-form-1"></img>
         <img class="gray-form-2"></img>
         <div class="wrapperContent">
@@ -37,7 +44,30 @@
             in interior architecture, interior design and décor that redefines
             laid-back luxury.
           </p>
-          <button>Explore Now &rarr;</button>
+          <div class="buttonWrapper">
+            <button>Explore Now</button>
+            <p>&#11106;</p>
+          </div>
+        </div>
+        <img src="assets/image-2.png" alt="" class="image2">
+        <img src="assets/image-3.png" alt="image-3" class="image3" />
+        <img class="arrow" src="assets/Line 22.png" alt="arrow" />
+        <div class="stats">
+          <div class="stat">
+            <h2>24</h2>
+            <p>Years of Experience</p>
+          </div>
+          <div class="stat">
+            <h2>162</h2>
+            <p>Projects Completed</p>
+          </div>
+        </div>
+        <div class="inputContainer">
+          <label for="email">Make your dream home.</label>
+          <div class="inputWrapper">
+            <input id="email" type="text" placeholder="Your email address">
+            <button>Let's Chat</button>
+          </div>
         </div>
       </section>
       <section></section>
