feat: created the createSection.

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
       <button>Contact us</button>
     </header>
     <main>
-        <div class="lineSmall"></div>
-        <div class="lineSmall2"></div>
-        <p class="mirroredText">Modern Interior Design Studio</p>
-        <div class="line"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-        <div class="line4"></div>
-        <section class="heroSection">
+      <div class="line"></div>
+      <div class="lineSmall"></div>
+      <div class="lineSmall2"></div>
+      <p class="mirroredText">Modern Interior Design Studio</p>
+      <div class="line2"></div>
+      <div class="line3"></div>
+      <div class="line4"></div>
+      <section class="heroSection">
         <div class="yellow"></div>
         <div class="wrapperGray">
-          <img class="gray"></img>
+          <img class="gray" />
         </div>
-        <img class="gray-form-1"></img>
-        <img class="gray-form-2"></img>
+        <img class="gray-form-1" />
+        <img class="gray-form-2" />
         <div class="wrapperContent">
-          <h1>Modern Interior Design Service</h1>
+          <h2>Modern Interior Design Service</h2>
           <p>
             Interiorfirm is an acclaimed multidisciplinary studio specializing
             in interior architecture, interior design and décor that redefines
@@ -49,7 +49,7 @@
             <p>&#11106;</p>
           </div>
         </div>
-        <img src="assets/image-2.png" alt="" class="image2">
+        <img src="assets/image-2.png" alt="" class="image2" />
         <img src="assets/image-3.png" alt="image-3" class="image3" />
         <img class="arrow" src="assets/Line 22.png" alt="arrow" />
         <div class="stats">
@@ -65,12 +65,32 @@
         <div class="inputContainer">
           <label for="email">Make your dream home.</label>
           <div class="inputWrapper">
-            <input id="email" type="text" placeholder="Your email address">
+            <input id="email" type="text" placeholder="Your email address" />
             <button>Let's Chat</button>
           </div>
         </div>
       </section>
-      <section></section>
+      <section class="createSection">
+        <div class="blur"></div>
+        <h3>Create your Dream Space</h3>
+        <div class="wrapperCards">
+          <div class="card">
+            <img src="assets/house.svg" alt="" />
+            <h5>Smooth workflow</h5>
+            <p>We deliver the final work with great professional way.</p>
+          </div>
+          <div class="card">
+            <img src="assets/chair.svg" alt="" />
+            <h5>Professionalism</h5>
+            <p>We deliver the final work with great professional way.</p>
+          </div>
+          <div class="card">
+            <img src="assets/wall.svg" alt="" />
+            <h5>Trusted platform</h5>
+            <p>We deliver the final work with great professional way.</p>
+          </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
