feat: creted providing section with its elements

--- a/index.html
+++ b/index.html
@@ -91,7 +91,23 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <section class="providingSection">
+        <h3>Providing Innovative Interior Design.</h3>
+        <div class="line-5"></div>
+        <div class="blurYellow"></div>
+        <div class="gray-form-3"></div>
+        <div class="gray-form-4"></div>
+        <div class="yellow-2">
+          <p>
+            Since 1999, we have been providing great flooring solutions and
+            customer service for homeowners and commercial clients. among
+            flooring materials, none is more elegant and luxurious than natural
+            stone.
+          </p>
+          <button>About Us</button>
+          <img src="assets/Line 22.png" alt="">
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
