feat: created amazing and unique section

--- a/index.html
+++ b/index.html
@@ -105,11 +105,34 @@
             stone.
           </p>
           <button>About Us</button>
-          <img src="assets/Line 22.png" alt="">
+          <img src="assets/Line 22.png" alt="" />
         </div>
       </section>
-      <section></section>
-      <section></section>
+      <section class="uniqueSection">
+        <h3>We will make Unique Designs for you</h3>
+        <img src="assets/uniqueSectionImage.png" alt="" />
+        <p>
+          We create designs in a collaborative environment enabling us to
+          deliver the client’s ultimate vision. Our designs are current, yet
+          still possess a timeless style generating broad market appeal.
+        </p>
+      </section>
+      <section class="amazingSection">
+        <h3>Amazing Projects from Talented Interior Architects!</h3>
+        <img src="assets/amazingImage.png" alt="" />
+        <div class="yellow-3">
+          <div>
+            <h3>Modern Style.</h3>
+            <p>
+              The modernist movement began to take shape when it shifted away from
+              traditional construction and design elements such as wood, stone,
+              and brick and toward industrial materials like as glass, steel, and
+              concrete.
+            </p>
+          </div>
+          <button>Explore</button>
+        </div>
+      </section>
       <section></section>
       <section></section>
     </main>
