feat: added more two sections.

--- a/index.html
+++ b/index.html
@@ -124,17 +124,45 @@
           <div>
             <h3>Modern Style.</h3>
             <p>
-              The modernist movement began to take shape when it shifted away from
-              traditional construction and design elements such as wood, stone,
-              and brick and toward industrial materials like as glass, steel, and
-              concrete.
+              The modernist movement began to take shape when it shifted away
+              from traditional construction and design elements such as wood,
+              stone, and brick and toward industrial materials like as glass,
+              steel, and concrete.
             </p>
           </div>
           <button>Explore</button>
         </div>
       </section>
-      <section></section>
-      <section></section>
+      <section class="feedbackSection">
+        <div>
+          <h3>Our customers feedback</h3>
+          <img src="assets/aspas.svg" alt="" />
+        </div>
+
+        <div class="wrapperQuote">
+          <div class="gray-small-1"></div>
+          <div class="quote">
+            <h5>Jordyn Dorwart</h5>
+            <p>
+              “Amaizing fast and reliable customer support! The team of willing
+              to go mile for customer service!”
+            </p>
+            <p>Jordyn Dorwart</p>
+          </div>
+        </div>
+      </section>
+      <section class="interestSection">
+        <div class="cta">
+          <h3>Interest in Working with Us?</h3>
+          <p>
+            Do you have a passion for creating beautiful and functional spaces?
+            If you are interested in working with us, please visit our website
+            and fill out the application form.
+          </p>
+          <button>Explore</button>
+        </div>
+        <div class="gray-small-1"></div>
+      </section>
     </main>
   </body>
 </html>
