feat: added footer with its specifications based on figma. As result, finished landpage.

--- a/index.html
+++ b/index.html
@@ -164,5 +164,58 @@
         <div class="gray-small-1"></div>
       </section>
     </main>
+    <footer>
+      <div class="wrapperContentFooter">
+        <div class="wrapperLogo">
+          <img src="assets/logo.svg" alt="" />
+          <p>
+            Interiorfirm is an acclaimed multidisciplinary studio specializing
+            in interior architecture, interior design.
+          </p>
+        </div>
+        <div class="wrapperFooter">
+          <nav>
+            <h5>Company</h5>
+            <p>Carrer</p>
+            <p>About Us</p>
+            <p>Blog</p>
+            <p>Feature</p>
+            <p>Story</p>
+          </nav>
+          <nav>
+            <h5>Design</h5>
+            <p>2D Designer</p>
+            <p>3D Designer</p>
+            <p>Collaboration</p>
+            <p>Tools</p>
+            <p>Important Link</p>
+          </nav>
+          <nav>
+            <h5>Links</h5>
+            <p>Projects</p>
+            <p>Contact</p>
+            <p>Send Email</p>
+            <p>Fiveer</p>
+            <p>upWork</p>
+          </nav>
+          <nav>
+            <h5>Material</h5>
+            <p>Company Profile</p>
+            <p>Asset</p>
+            <p>Location Map</p>
+            <p>Estimate Cost</p>
+            <p>Default Quotation</p>
+          </nav>
+        </div>
+      </div>
+      <div class="lineFooter"></div>
+      <div class="copyright">
+        <p>© Copyright 2021 Interiorfirm ― All Rights Reserved.</p>
+        <div>
+          <p>Privacy Policy</p>
+          <p>Terms & Conditions</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
